# PixCPP

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: build.yml
src/: App.cpp  App.hpp  main.cpp  resources.rc
src/core/: MenuBar.cpp  MenuBar.hpp  Windows.cpp  Windows.hpp
src/tools/: FileIO.cpp  FileIO.hpp  TextureManager.cpp  TextureManager.hpp  Tools.cpp  Tools.hpp
src/ui/: Canvas.cpp  Canvas.hpp  CanvasRender.cpp  CanvasRender.hpp  CanvasWindow.cpp  CanvasWindow.hpp
src/utils/: ImageIO.cpp  ImageIO.hpp
